# yatube_project

./: .gitignore  README.md  pyproject.toml
about/: urls.py  views.py
core/templatetags/: user_filters.py
docker/: docker-compose.yml  yatube_db-dump.sql
jinja2/: base.html
jinja2/about/: author.html  skills.html  tech.html
jinja2/includes/: footer.html  header.html
jinja2/posts/: group_detail.html  group_list.html  index.html  post_create.html  post_detail.html  post_edit.html  post_update.html  user_profile.html
jinja2/posts/includes/: paginator.html  post_form_template.html
jinja2/users/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  sign_up.html
jinja2/users/includes/: auth_form_template.html  auth_report_template.html  form_template.html  report_template.html
posts/: admin.py  models.py  urls.py  views.py
templates/posts/: group_list.html  index.html
users/: form.py  urls.py  views.py
yatube/: settings.py  urls.py
