[tool.poetry]
name = "yatube-project"
version = "0.1.2"
description = ""
authors = ["Andrew Rozhnev <foo@bar.com>"]
readme = "README.md"
packages = [{include = "yatube_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.1"
Jinja2 = "3.1.2"
django-environ = "0.9.0"
django-jinja = "2.10.2"
psycopg2-binary = "2.9.3"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
