[tool.poetry]
name = "yatube-project"
version = "1.0.0"
description = ""
authors = ["Andrew Rozhnev <andrewrozhnev@gmail.com>"]
readme = "README.md"
packages = [{include = "yatube_project"}]

[tool.poetry.dependencies]
python = "~3.11.3"
Django = "~4.2.1"
django-environ = "^0.10.0"
django-jinja = "^2.10.2"
pytils = "^0.4.1"
psycopg = {extras = ["binary"], version = "^3.1.9"}


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
ipython = "^8.13.2"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
